--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Croussaints are Delicious</h1>
+    <h2>Hello</h2>
+    <p><a href="/about.html">About</a>"</p>
   </body>
 </html>
