--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <title>Multiple Pages Homework</title>
   </head>
   <body>
-    <h1>Croussaints are Delicious</h1>
-    <h2>Hello</h2>
-    <p><a href="/about.html">About</a>"</p>
+    <h1>Croissants are Delicious</h1>
+    <p>
+      The croissant, today a symbol of French baking, actually has its origins
+      in Austria. The pastry's history dates back to the 17th century, with a
+      connection to the **Austrian kipferl**, a crescent-shaped pastry that was
+      popular in Vienna. The most widely accepted story of the croissant's
+      invention involves the 1683 **Battle of Vienna**. According to legend,
+      when the Ottoman Turks laid siege to the city, Viennese bakers created the
+      crescent-shaped pastry to celebrate the defeat of the invaders,
+      symbolizing the crescent moon on the Turkish flag. In the 19th century,
+      the pastry made its way to France, where it was popularized by **Marie
+      Antoinette**. She was Austrian and is said to have introduced the kipferl
+      to the French court, where it evolved into the more refined, flaky version
+      we recognize as the croissant today. By the early 20th century, the
+      croissant had become a staple of French breakfasts, thanks to the
+      introduction of laminated dough (layers of butter and dough) by French
+      bakers, which gave the pastry its signature flaky texture. Today, the
+      croissant is a beloved part of French cuisine and has become popular
+      worldwide.
+    </p>
+    <a href="/contact.html">About</a>
+    <a href="/photo.html">Photos</a>
   </body>
 </html>
