--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
   </head>
   <body>
-    <h1>Where to try Croissants?</h1>
+    <h1 class="mt-5">Where to try Croissants?</h1>
     <p>
-      In Houston, there are several fantastic spots where you can find delicious
-      croissants, whether you're after a traditional buttery one, an almond
-      croissant, or a creative twist on the classic. Here are some top places to
-      buy croissants in Houston: ### 1. **Common Bond Café & Bakery** -
-      **Location**: 1706 Westheimer Rd, Houston, TX - Common Bond is one of
-      Houston’s most beloved bakeries, known for its high-quality, artisanal
-      pastries. Their croissants are buttery, flaky, and made with care, and
-      they often offer a variety of flavors, including almond croissants and
-      pain au chocolat.
+     Email us at <a href="mailto:alondraturner@yahoo.com">📧 alondraturner@yahoo.com</a>
     </p>
+
+
+    <div class="links">
+
+        <a href="/">Back to homepage</a>
+    </div>
   </body>
 </html>
