--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Pleasant Bakery business contact information">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Business Contact Information -Pleasant Bakery</title>
   </head>
   <body>
     <h1 class="mt-5">Where to try Croissants?</h1>
@@ -16,7 +17,7 @@
 
     <div class="links">
 
-        <a href="/">Back to homepage</a>
+        <a href="/" title="Pleasant Bakery website">Back to homepage</a>
     </div>
   </body>
 </html>
