updated photo link SEO

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </p>
     <div class="links">
         <a href="/" title="Pleasant Bakery Website">Homepage</a>
-        <a href="/photo.html" title="Croissant">Photo</a>
+        <a href="/photo.html" title="Photo gallery">Photo</a>
         <a href="/contact.html" title="Contact Us">Contact</a>      
     </div>  
   </body>
